--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LAB_WEEK_10</string>
     <string name="text_total">Total: %d</string>
     <string name="button_increment">Press Me</string>
+    <string name="text_last_updated">Last updated: %1$s</string>
 </resources>
